arch/config/waybar/style.css
@import "colors.css";

* {
  /* Use Inter for text elements and fallback to a nerd font for icons. */
  /* ZedMono nerd font is preinstalled and used on terminals. */
  font-family: 'Inter Variable', 'ZedMono Nerd Font';
  font-size: 14px;
  min-height: 0;
}

window#waybar {
  background: @base;
  color: @text;
}

.modules-left {
  /* Reserve space for privacy indicators gap */
  margin: 2px 0;
}

#workspaces button {
  /* TODO: fix gap between active element's border and bar caused by .modules-left space reserve */
  margin: 0px;
  padding: 0 0.5rem;

  color: @ws-inactive-text;

  /* Reset corner radius and setup bottom border */
  border-radius: 0;
  border: 0px solid transparent;
  border-bottom-width: 2px;
}

#workspaces button label {
  color: inherit;
}

#workspaces button.urgent {
  color: @red;
}

#workspaces button.focused,
#workspaces button.active {
  border-bottom-color: @ws-active-background;
  color: white;
}

/* Modules - right */

#bluetooth,
#network,
#language,
#wireplumber,
#idle_inhibitor,
#custom-darkmode {
  /* HACK: Padding is necessary to reserve panel height and avoid jump when privacy icon appears*/
  padding: 0.3rem 0;
  margin: 0 0.5rem;
  /* margin: 0 10px; */
  /* border: 1px solid white; */
}

#backlight,
#battery,
#bluetooth,
#network,
#wireplumber,
#idle_inhibitor,
#custom-darkmode {
  padding-left: 0.4rem;
  padding-right: 0.4rem;
}

#language {
  /* Move language a bit left from a corner of the screen */
  margin-right: 1rem;
}

/* #backlight, */
/* #battery { */
/*   margin: 0 10px; */
/* } */

#clock {
  font-weight: 400;
  color: @text;
}

#backlight {
  color: @yellow;
}

/* Privacy */
#privacy-item {
  border: none;
  padding: 0.3rem 0.8rem;
  margin: 2px 0.4rem;
  border-radius: 4px;
  color: #fff;
}

#privacy-item.audio-in {
  background: #f19a38;
}

#privacy-item.screenshare {
  background: #5756d5;
}

/* Tray  */
#tray {
  /* Reverse extra space to the right to separate privacy block */
  margin: 0 0.5rem 0 1rem;
}

#tray menu {
  color: @text;
  background: @surface0;
  border-radius: 0;
  font-size: 0.75rem;
}

/* #tray menu * { */
/*   padding: 0; */
/*   margin: 0; */
/* } */

#mode {
  background: @red;
  color: @text;
  padding: 0 5px;
}

#idle_inhibitor.activated {
  color: @yellow;
}

#battery.charging {
  color: @green;
}

#battery.warning:not(.charging) {
  color: @orange;
}

#battery.critical:not(.charging) {
  color: @hi-red;
}

